--- a/Frontend/Angular/CHEO/angular.json
+++ b/Frontend/Angular/CHEO/angular.json
@@ -122,6 +122,10 @@
               "devServerTarget": "CHEO:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
